Fix some responsive problems on mobile

--- a/Portfolio/public/styles.css
+++ b/Portfolio/public/styles.css
@@ -238,9 +238,15 @@
   .inline-block {
     display: inline-block;
   }
+  .table {
+    display: table;
+  }
   .size-5 {
     width: calc(var(--spacing) * 5);
     height: calc(var(--spacing) * 5);
+  }
+  .h-10 {
+    height: calc(var(--spacing) * 10);
   }
   .h-12 {
     height: calc(var(--spacing) * 12);
@@ -260,6 +266,9 @@
   .h-full {
     height: 100%;
   }
+  .min-h-fit {
+    min-height: fit-content;
+  }
   .w-12 {
     width: calc(var(--spacing) * 12);
   }
@@ -277,6 +286,12 @@
   }
   .max-w-3xl {
     max-width: var(--container-3xl);
+  }
+  .border-collapse {
+    border-collapse: collapse;
+  }
+  .resize {
+    resize: both;
   }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -298,6 +313,10 @@
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
+  }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
   }
   .bg-\[\#000212\] {
     background-color: #000212;
@@ -380,6 +399,9 @@
   .text-\[clamp\(27px\,6vw\,45px\)\] {
     font-size: clamp(27px, 6vw, 45px);
   }
+  .text-\[clamp\(30px\,7vw\,60px\)\] {
+    font-size: clamp(30px, 7vw, 60px);
+  }
   .text-\[clamp\(30px\,7vw\,70px\)\] {
     font-size: clamp(30px, 7vw, 70px);
   }
@@ -398,8 +420,19 @@
   .text-\[\#c7d3fc\] {
     color: #c7d3fc;
   }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
   .backdrop-blur-lg {
     --tw-backdrop-blur: blur(var(--blur-lg));
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+  }
+  .backdrop-filter {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
@@ -424,9 +457,34 @@
       margin-top: calc(var(--spacing) * 0);
     }
   }
+  .sm\:h-20 {
+    @media (width >= 40rem) {
+      height: calc(var(--spacing) * 20);
+    }
+  }
+  .sm\:h-\[100dvh\] {
+    @media (width >= 40rem) {
+      height: 100dvh;
+    }
+  }
   .sm\:h-\[100vh\] {
     @media (width >= 40rem) {
       height: 100vh;
+    }
+  }
+  .sm\:h-\[max\(100dvh\,50vw\)\] {
+    @media (width >= 40rem) {
+      height: max(100dvh, 50vw);
+    }
+  }
+  .sm\:h-\[max\(100dvh\,60vw\)\] {
+    @media (width >= 40rem) {
+      height: max(100dvh, 60vw);
+    }
+  }
+  .sm\:h-\[max\(100dvh\,100vw\)\] {
+    @media (width >= 40rem) {
+      height: max(100dvh, 100vw);
     }
   }
   .md\:col-\[1\/3\] {
@@ -444,9 +502,24 @@
       display: grid;
     }
   }
+  .md\:h-\[80dvh\] {
+    @media (width >= 48rem) {
+      height: 80dvh;
+    }
+  }
   .md\:h-\[80vh\] {
     @media (width >= 48rem) {
       height: 80vh;
+    }
+  }
+  .md\:h-\[max\(80dvh\,40vw\)\] {
+    @media (width >= 48rem) {
+      height: max(80dvh, 40vw);
+    }
+  }
+  .md\:h-\[max\(80dvh\,50vw\)\] {
+    @media (width >= 48rem) {
+      height: max(80dvh, 50vw);
     }
   }
   .md\:grid-cols-2 {
@@ -663,6 +736,11 @@
     }
   }
 }
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-gradient-position {
   syntax: "*";
   inherits: false;
@@ -712,6 +790,11 @@
 @property --tw-tracking {
   syntax: "*";
   inherits: false;
+}
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
 }
 @property --tw-backdrop-blur {
   syntax: "*";
@@ -780,6 +863,7 @@
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-border-style: solid;
       --tw-gradient-position: initial;
       --tw-gradient-from: #0000;
       --tw-gradient-via: #0000;
@@ -791,6 +875,7 @@
       --tw-gradient-to-position: 100%;
       --tw-font-weight: initial;
       --tw-tracking: initial;
+      --tw-outline-style: solid;
       --tw-backdrop-blur: initial;
       --tw-backdrop-brightness: initial;
       --tw-backdrop-contrast: initial;
